force-app/main/default/objects/Routing_Log__c/fields/Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name__c</fullName>
    <description>Display name of the assigned agent. Denormalized from the Assigned_To__c User record at insert time for reporting performance — avoids User lookup joins in aggregate analytics queries. Null when no agent was assigned (routing failure). Used by the Analytics Dashboard agent utilisation lens.</description>
    <label>Agent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>