force-app/main/default/objects/Routing_Log__c/fields/Assignment_Duration_Ms__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Duration_Ms__c</fullName>
    <description>Elapsed milliseconds from routing request receipt (RoutingEngine.execute() entry) to assignment completion (Routed_At__c). Measures full engine processing time including config evaluation, candidate query, capability matching, and lock acquisition. Used by the Analytics Dashboard routing velocity lens. Null when routing fails before assignment.</description>
    <label>Assignment Duration (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>