force-app/main/default/objects/Routing_Log__c/fields/Assignment_Source__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Source__c</fullName>
    <description>Identifies how the assignment was made. AUTOMATIC = engine-routed via normal candidate ranking. MANUAL = supervisor override via the Dashboard (F3). Used for reporting on override frequency and audit compliance. Defaults to AUTOMATIC when not explicitly set.</description>
    <label>Assignment Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUTOMATIC</fullName>
                <default>true</default>
                <label>Automatic</label>
            </value>
            <value>
                <fullName>MANUAL</fullName>
                <label>Manual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>