force-app/main/default/objects/Routing_Log__c/fields/Candidate_Count__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Count__c</fullName>
    <description>Number of candidates evaluated before lock succeeded. Useful for concurrency analysis. High values may indicate over-broad conditions.</description>
    <label>Candidate Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>