force-app/main/default/objects/Routing_Log__c/fields/Entry_Point__c.field-meta.xml
<CustomField>
    <fullName>Entry_Point__c</fullName>
    <description>Which integration surface initiated this routing attempt. Critical for production debugging and error-rate-by-entry-point analysis.</description>
    <label>Entry Point</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>InvocableMethod</fullName>
                <label>Invocable Method</label>
            </value>
            <value>
                <fullName>REST</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
            <value>
                <fullName>GlobalAction</fullName>
                <label>Global Action</label>
            </value>
            <value>
                <fullName>ScheduledJob</fullName>
                <label>Scheduled Job</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>