force-app/main/default/objects/Routing_Log__c/fields/Lock_Contention__c.field-meta.xml
<CustomField>
    <fullName>Lock_Contention__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if any retry occurred during assignment. Enables dashboard filtering for contention rate without parsing error messages.</description>
    <label>Lock Contention</label>
    <type>Checkbox</type>
</CustomField>