force-app/main/default/objects/Routing_Log__c/fields/Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Override_Reason__c</fullName>
    <description>Free-text reason provided by the supervisor when manually reassigning a record via the Supervisor Dashboard (F3). Required by the manualReassign flow — supervisors must document why they overrode automatic routing. Null for AUTOMATIC assignments.</description>
    <label>Override Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>