force-app/main/default/objects/Routing_Log__c/fields/Routed_At__c.field-meta.xml
<CustomField>
    <fullName>Routed_At__c</fullName>
    <description>Timestamp of the assignment attempt. Used for time-based dashboard aggregations.</description>
    <label>Routed At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>