force-app/main/default/objects/Routing_Log__c/fields/SLA_Met__c.field-meta.xml
<CustomField>
    <fullName>SLA_Met__c</fullName>
    <description>SLA compliance outcome for this routing attempt. Met = assignment completed within SLA_Minutes__c target. Breached = assignment exceeded target. Blank/null = SLA_Minutes__c not configured on the routing config, or routing did not result in a successful assignment. Picklist instead of Checkbox because SF Checkboxes cannot be null — we need three states for accurate analytics (Met vs Breached vs Not Tracked).</description>
    <label>SLA Met</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Met</fullName>
            </value>
            <value>
                <fullName>Breached</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>